--- a/src/index.html
+++ b/src/index.html
@@ -14,3 +14,7 @@
   <script src="https://kit.fontawesome.com/df5c8b9c43.js" crossorigin="anonymous"></script>
 </body>
 </html>
+
+<!-- Install AG-Grid Library:-
+  npm install --save ag-grid-community
+  npm install --save ag-grid-angular -->
